<resources>
    <string name="app_name">Movie Quotes</string>
    <string name="app_name_first">Movie</string>
    <string name="app_name_second">Quotes</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="radio_registration">Регистрация</string>
    <string name="radio_sign_in">Вход</string>
    <string name="sign_in">Войти</string>
    <string name="pas">Пароль</string>
    <string name="second_pas">Подтвердите пароль</string>
    <string name="email">Электронная почта</string>
    <string name="name">Имя пользователя</string>
    <string name="favourites">Favourites</string>
    <string name="home_title">Main</string>
    <string name="profile_title">Profile</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Поиск</string>
    <string name="search_zero">Начните вводить цитату или фильм</string>
    <string name="save_button_text">Save</string>
    <string name="signout_button_text">Sign out</string>
    <string name="profile_email">Your email</string>
    <string name="profile_username">Your username</string>
    <string name="profile_sex">Sex: </string>
    <string name="sex_m">Male</string>
    <string name="sex_f">Female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_quote">Add quote</string>
</resources>