<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".StartActivity">

    <LinearLayout
        android:id="@+id/textView_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:rotation="-5"
        app:layout_constraintBottom_toTopOf="@id/sign_reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/title_ic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#000000"
            android:shadowDx="2.4"
            android:shadowDy="2.4"
            android:shadowRadius="0.01"
            android:text="@string/app_name_first"
            android:textAlignment="textStart"
            android:textColor="@color/bar_bg"
            android:textSize="50sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#000000"
            android:shadowDx="2.4"
            android:shadowDy="2.4"
            android:shadowRadius="0.01"
            android:text="@string/app_name_second"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            />
    </LinearLayout>


    <ImageView
        android:id="@+id/title_ic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="10dp"
        android:rotation="5"
        android:src="@drawable/film_ic_com"
        app:layout_constraintBottom_toTopOf="@id/sign_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:focusable="true"
        android:id="@+id/sign_reg"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/radio_sign_in"
            android:textSize="25sp"
            android:textStyle="bold"
            android:button="@color/teal_700"
            android:checked="true"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/enter_radio_selector"
            android:layout_marginEnd="5dp"
            android:textColor="@drawable/enter_text_selector"/>

        <RadioButton
            android:id="@+id/radioButton_reg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:background="@drawable/enter_radio_selector"
            android:textStyle="bold"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="5dp"
            android:button="@color/teal_700"
            android:textColor="@drawable/enter_text_selector"
            android:text="@string/radio_registration"/>


    </RadioGroup>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sign_reg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editText_login_EmailAddress"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:maxLines="1"
            android:maxLength="40"
            android:textColorHint="@color/white"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:background="@drawable/enter_edittext_bg"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="5dp"
            />

        <EditText
            android:id="@+id/editText_login_Password"
            android:layout_width="270dp"
            android:maxLines="1"
            android:autofillHints="password"
            android:maxLength="20"
            android:layout_height="58dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:ems="10"
            android:hint="@string/pas"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@drawable/enter_edittext_bg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/bar_bg"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:padding="10dp"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:visibility="invisible"
            android:id="@+id/error_textView_login"
            android:textStyle="italic"
            android:textSize="18sp"
            android:textColor="@color/error"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Error"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/reg_form"
        android:visibility="gone"
        tools:visibility="invisible"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sign_reg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editText_reg_EmailAddress"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:textColorHint="@color/white"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:maxLength="40"
            android:maxLines="1"
            android:textColor="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:background="@drawable/enter_edittext_bg"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="5dp"
            />
        <EditText
            android:id="@+id/editText_reg_name"
            android:layout_width="270dp"
            android:maxLines="1"
            android:layout_height="58dp"
            android:autofillHints="name"
            android:ems="10"
            android:maxLength="20"
            android:textColor="@color/white"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:background="@drawable/enter_edittext_bg"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="5dp"
            />

        <EditText
            android:id="@+id/editText_reg_Password"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:ems="10"
            android:autofillHints="password"
            android:maxLength="20"
            android:textColor="@color/white"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            android:hint="@string/pas"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:padding="10dp"
            android:background="@drawable/enter_edittext_bg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"/>
        <EditText
            android:id="@+id/editText_reg_second_Password"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:ems="10"

            android:textColor="@color/white"
            android:maxLength="20"
            android:autofillHints="password"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:hint="@string/second_pas"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@drawable/enter_edittext_bg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"/>

        <Button
            android:id="@+id/button_reg"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/bar_bg"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:visibility="invisible"
            android:id="@+id/error_textView_reg"
            android:textStyle="italic"
            android:textSize="18sp"
            android:textColor="@color/error"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Error"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>